--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,7 @@
 .history
 .svn/
 .idea/
+*.iml
 
 # The .vscode folder contains launch configuration and tasks you configure in
 # VS Code which you may wish to be included in version control, so this line
